changed timer logic, etc.

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -83,8 +83,8 @@
 <body>
     <h1>The Circus</h1>
     <div id="timing-info" style="text-align: center; margin-top: 20px;">
-        <p>Fetch time: <span id="fetch-time">-</span> seconds</p>
-        <p>Spoof time: <span id="spoof-time">-</span> seconds</p>
+        <p>LLM-less Fetch time: <span id="fetch-time">-</span> seconds</p>
+        <p>LLM Spoof time: <span id="spoof-time">-</span> seconds</p>
     </div>
     <div id="headlines-wrapper">
         <div id="fox-column" class="column">
